--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="profile-card">
   <!-- Replace the src below with your image URL or file path -->
-  <img src="images/zep card.jpg" alt="Profile Picture" class="profile-img" />
+  <img src="zep card.jpg" alt="Profile Picture" class="profile-img" />
   
   <div class="profile-info">
     <h2>Zepplin Adams</h2>
@@ -49,9 +49,9 @@
     <!-- Carousel / Slider -->
     <section class="carousel">
   <div class="carousel-track">
-    <img src="images/blog-1.jpg" alt="Slide 1" class="carousel-slide" />
-    <img src="images/blog-2.jpg" alt="Slide 2" class="carousel-slide" />
-    <img src="images/blog-1.jpg" alt="Slide 3" class="carousel-slide" />
+    <img src="blog-1.jpg" alt="Slide 1" class="carousel-slide" />
+    <img src="blog-2.jpg" alt="Slide 2" class="carousel-slide" />
+    <img src="blog-1.jpg" alt="Slide 3" class="carousel-slide" />
   </div>
 
   <button class="carousel-btn prev">‹</button>
